Split nix based bins from build script

--- a/scripts/build
+++ b/scripts/build
@@ -1,9 +1,7 @@
 #!/usr/bin/env sh
 
-nix run \
-  'nixpkgs#texlivePackages.latexmk' \
-  -- \
-  -pdf \
-  resume.tex
+rm resume.pdf
+
+./bin/tex2pdf resume.tex
 
 open resume.pdf
